src/scss/themes/fylr/components/_date-time.scss
// Calendar Popup
.cui-layer-root-cui-date-time-popover .cui-layer > .cui-pane > .cui-vertical-layout-center {
	overflow: hidden; // override default, see: .cui-layer > .cui-pane > .cui-vertical-layout-center

	@include pane-padding-reset();

	margin: 0;
}

.cui-date-time-popover .cui-date-time-popover-inner {
	--calendar-background: #{$calendar-background};
	--calendar-static-cells-background: #{$calendar-static-cells-background};

	background-color: var(--calendar-background);
	flex: 1 1 auto;

	.cui-date-time-header {
		display: none; // todo: remove from markup?
	}

	&[browser='time'] {
		.cui-date-time-calendar {
			margin-left: -100%;
		}
	}

	.cui-date-time-browser {
		display: flex;
		// overflow: hidden; cuts off year-picker outline
		flex: 1 1 auto;

		.cui-date-time-calendar,
		.cui-date-time-clock {
			width: 100%;
		}

		.cui-date-time-calendar {
			transition: margin-left 0.5s ease-out;
		}
	}
}

.cui-date-time-clock {
	display: none; // todo: remove from markup?
}

// Calendar
// DateTime Format | Day:Month:Year | Hour:Minute |
.cui-date-time-calendar {
	font-size: $calendar-font-size;

	.cui-table {
		border: 0;
		margin-top: $spacer-sm;
	}

	.cui-buttonbar {
		padding: $spacer-sm;
		justify-content: space-between;
	}
	
	// Apply layer header styling
	> .cui-buttonbar {
		background: $layer-header-background;
		color: $layer-header-color;
		padding: $spacer $spacer-sm;
		display: grid;
		grid-template-columns: auto auto;
		grid-template-rows: auto 1fr;
		grid-template-areas:
			'd_title t_title'
			'date time';
		gap: 0 $spacer;

		> *:not(:last-child) {
			margin: 0;
		}

		@include ungroup-visually-inverted();
		
		.cui-buttonbar-group {
			@include buttonbar-group-inverted();
			
			.cui-button-select {
				@include button-color-inverted();
	
				.cui-button-center {
					padding-left: math.div($btn-padding-x, 2) !important;
					padding-right: math.div($btn-padding-x, 2) !important;
				}
	
				.cui-button-right {
					padding-right: $spacer-xs;
				}
			}
		}

		.cui-select-date-title,
		.cui-select-time-title {
			@include layer-title();
	
			margin-bottom: $spacer-sm;
			margin-left: math.div($btn-padding-x, 2);
		}
	
		.cui-select-date-title {
			grid-area: d_title;
		}
	
		.cui-select-time-title {
			grid-area: t_title;
		}
	
		.cui-buttonbar-group-date {
			grid-area: date;
		}
	
		.cui-buttonbar-group-time {
			grid-area: time;
			padding-right: $spacer-xs;
		}
	}

	.cui-buttonbar-group-date,
	.cui-buttonbar-group-time {
		.cui-data-field-input > .cui-button-select {
			width: auto;
		}
	}

	.cui-buttonbar-group-time {
		.cui-select:not(.cui-date-time-am-pm-select):not(:first-child)::before {
			content: ':';
			position: relative;
			top: 4px;
			left: 2px;
			color: theme-color('muted');
		}
	}

	.cui-select {
		.cui-button-center {
			span:empty::after {
				content: '\2013\2013';
			}
		}

		&.cui-date-time-am-pm-select .cui-button-center {
			width: 32px;

			span:empty::after {
				content: 'am';
				display: block;
				position: relative;
				top: -1px;
			}
		}
	}
}

.cui-date-time-footer {
	overflow: visible !important; // show year input outline
	margin-bottom: $spacer-xs;

	.cui-buttonbar > *:not(:last-child) {
		margin-right: 0;
	}
		
	.cui-date-time-header-month,
	.cui-date-time-header-year .cui-buttonbar-group {
		@include ungroup-visually();
	}

	[cui-data-field-name='year'] input {
		$year-padding: $spacer-xs;

		width: calc(4ch + 4 * #{$year-padding});
		min-width: 0;
		text-align: center;
		position: relative;
		padding: 0 $year-padding;

		.cui-browser-ie:not(.cui-browser-edge) & {
			width: calc(6ch + 4 * #{$year-padding});
		}
	}

	.cui-label {
		cursor: default;
	}

	> .cui-horizontal-layout-left {
		flex: 1 0 auto;
		margin-right: $spacer;

		.cui-label { // June, September
			flex: 1 1 auto;
			justify-content: center;
			margin: 0;
		}
	}

	> .cui-horizontal-layout-center {
		flex-grow: 0 !important;
	}

	> .cui-horizontal-layout-right {
		overflow: visible !important; // show year input outline
	}
}

.cui-date-time-date {
	width: 100%;
	flex-grow: 1;

	.cui-tr {
		padding: 0;
		display: flex;

		&:last-child {
			.cui-td {
				margin-bottom: 0;
			}
		}

		&.cui-date-time-month-header {
			position: relative;
			background: var(--calendar-static-cells-background);
			color: var(--brand-color, #{$calendar-static-cells-color});

			&::after {
				content: '';
				position: absolute;
				bottom: 0;
				left: 0;
				height: 1px;
				width: 100%;
				background-color: var(--calendar-background);
			}
		}
	}

	.cui-td,
	.cui-th {
		$width: calc((100% - 7px) / #{$calendar-cell-count});

		position: relative;
		width: $width;
		padding: 0;
		padding-top: calc(#{$width} * 0.95); // make the cells visually square
		display: flex;
		justify-content: center;
		align-self: center;
		border-right: 1px solid var(--calendar-background);
		border-bottom: 1px solid var(--calendar-background);
		cursor: default;

		&:last-child {
			border-right: 0;
		}

		&::after {
			display: none;
		}

		span,
		div {
			position: absolute;
			display: flex;
			justify-content: center;
			align-items: center;
			top: 50%;
			left: 50%;
			transform: translate(-50%, -50%);
			width: $calendar-cell-size;
			height: $calendar-cell-size;
			line-height: $calendar-cell-size;
			text-align: center;
			border-radius: 999px;
		}
	}

	.cui-th {
		font-size: $calendar-font-size * 0.8575;
		border: 0;
	}

	.cui-date-time-week {
		font-size: $calendar-font-size * 0.8575;
		background: var(--calendar-static-cells-background);
		color: var(--brand-color, #{$calendar-static-cells-color});
	}

	.cui-date-time-week-title {
		font-weight: $font-weight-normal;
	}

	.cui-date-time-day {
		cursor: pointer;

		&:hover {
			span {
				--calendar-date-hover-background: rgb(var(--brand-color-RGB), #{$calendar-date-hover-background-opacity});

				color: var(--brand-foreground-text-color, #{$body-color});
				background-color: var(--calendar-date-hover-background, #{rgba($calendar-date-active-background, $calendar-date-hover-background-opacity)});
			}
		}
	}

	.cui-date-time-previous-month,
	.cui-date-time-next-month {
		color: $calendar-date-previous-color;
	}

	.cui-date-time-now {
		span {
			border: 1px solid currentColor;
		}
	}

	.cui-date-time-selected {
		&:hover span,
		span {
			color: var(--brand-foreground-text-color, #{$white});
			background: var(--brand-color, #{$calendar-date-active-background});
		}
	}
}

// DateTime Popover
// todo: is this obsolete ??
.cui-menu.cui-date-time-60-select {
	.cui-item-list-body {
		box-sizing: content-box;
		width: 370px;
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;

		> * {
			box-sizing: border-box;
		}

		.cui-button {
			width: 37px;
			height: 30px;
			align-items: center;
			text-align: center;
		}
	}
}

.cui-date-time--select-menu {
	.cui-button-button {
		.cui-button-visual {
			display: flex;
			height: auto;
			min-height: $btn-height-sm + 2px;
			justify-content: center;
			border-radius: 0;
		}

		.cui-button-center {
			overflow: visible;
			padding: 0 0.15em;
		}
	}
}

